--- a/style/media.css
+++ b/style/media.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+@media(max-width: 1440px){
+    .section-a .circular{margin-top:-13%;}
+}
 @media (max-width: 640px) {
     .section .content p:first-child{font-size:14px;}
     .section .title_icon{background: url("../style/img/liucheng.png")no-repeat;background-size: cover;}
