--- a/style/index.css
+++ b/style/index.css
@@ -53,7 +53,7 @@ article.banner{padding-top:70px;}
 .section p,.section-a p,.section-c p,.section-d p{color:#999999;font-size:18px;padding-bottom:30px;}
 .section .content .text{font-size:16px;text-indent: 2em;line-height: 2.5;color:#444444;text-align: left;font-weight: bold;}
 .section .content .text span{font-weight: 500;}
-.section .title_icon{padding:62px 0;}
+.section .title_icon{padding:62px 0;min-width: 100%;}
 .section .title_icon .title-top{border-bottom: 1px solid #cccccc;padding-bottom: 20px;position: relative;padding-left:8px;padding-right: 12px;}
 .section .title_icon .title-bottom{padding-top: 20px;position: relative;padding-left:19px;}
 .section .title_icon .title-top div p,.section .title_icon .title-bottom div p {font-size:16px;color:#444444;padding:0;}
