--- a/style/application.css
+++ b/style/application.css
@@ -2,6 +2,8 @@
 .popover-content {
     word-break: break-all;
 }
+.popover{max-width:400px;}
+.modal-body{text-indent: 0;padding:20px;}
 .section-b{padding:50px 0;border:none;}
 .section-b .text h2{font-weight: 500;}
 .section-c{border:none;padding:0;}
@@ -14,16 +16,18 @@
 .section-a .circular .circular-inner h1{position: absolute;left:50%;margin-left:-64px;top:40%;}
 .section-a .circular .circular-inner p{position: absolute;top:57%;font-size:16px;margin-left:-20px;line-height: 30px;}
 .section-a .circular-out{width:500px;height: 500px;margin:0 auto;position: relative;top:36px;cursor: pointer;}
-.section-a .circular-out span:first-child{display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;top:4%;left:15%;}
-.section-a .circular-out span:nth-child(5){display: block;width:150px;height:150px;background:#ffffff;border-radius: 50%;position: absolute;top:3%;left:70%;}
-.section-a .circular-out span:nth-child(2){display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;top:30%;left:-27%;}
-.section-a .circular-out span:nth-child(3){display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;  position: absolute;top:71%;left:-40%;}
-.section-a .circular-out span:nth-child(4){display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;top:112%;left:-38%;}
-.section-a .circular-out span:nth-child(6){display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;top:30%;left:110%;}
-.section-a .circular-out span:nth-child(7){display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;top:68%;left:127%;}
-.section-a .circular-out span:nth-child(8){display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;top:109%;left:127%;}
+.section-a .circular-out span{display: block;width:150px;height:150px;background: #ffffff;border-radius: 50%;position: absolute;}
+.section-a .circular-out span:first-child{top:4%;left:15%;}
+.section-a .circular-out span:nth-child(5){top:3%;left:70%;}
+.section-a .circular-out span:nth-child(2){top:30%;left:-27%;}
+.section-a .circular-out span:nth-child(3){top:71%;left:-40%;}
+.section-a .circular-out span:nth-child(4){top:112%;left:-38%;}
+.section-a .circular-out span:nth-child(6){top:30%;left:110%;}
+.section-a .circular-out span:nth-child(7){top:68%;left:127%;}
+.section-a .circular-out span:nth-child(8){top:109%;left:127%;}
 .section-a .circular-out span img{position: absolute;top:50%;margin-top:-32px;left:50%;margin-left:-32px;}
 .section-a .circular-out span button{width:100%;height: 100%;opacity: 0;}
+.display{color:#1b6d85;margin-right:10px;cursor: pointer;text-align: right;}
 #out .current{background: #f1bc31;}
 #out .simg .pic{display: block;}
 .section{border-bottom: 1px solid #cccccc;}
